<resources>
    <string name="app_name">Monkey See Monkey Do</string>
    <string name="email_address">Email Address</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="enter_firstname">Enter First name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_Surname">Enter Surname</string>
    <string name="verify">VERIFY</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_username">Change Username</string>
    <string name="change_name">Change Name</string>
    <string name="change_surname">Change Surname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="api_key">AIzaSyChrBR11v6iA0rP623GQkfGlLZxSkrH72c</string>
    <string name="imperial_system">Imperial System</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="monkey_see_monkey_do">Monkey See Monkey Do</string>

</resources>