<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lvparent"

    android:padding="5dp"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Account Not Verified, Click On The Link Sent To Your Email To Verify!"
            android:textColor="#FF0000"
            android:textSize="15sp"
            android:visibility="invisible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Monkey See Monkey Do"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Login"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="204dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="start"
            android:text="Enter Email"
            android:textColor="#2d3436"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtIEmail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/myedittextbg"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/enter_email"
            android:padding="5dp"
            android:textColor="#2d3436" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="start"
            android:text="Password"
            android:textColor="#2d3436"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtIPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/myedittextbg"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#2d3436" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:background="@drawable/mybtn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Login"
            android:textColor="#fff" />


        <Button
            android:id="@+id/btnGoToRegister"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybtn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Register"
            android:textColor="#fff" />
    </LinearLayout>

<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">
<TextView
android:id="@+id/btnResetPW"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="1dp"
android:fontFamily="sans-serif-condensed-medium"
android:layout_gravity="center_horizontal"
android:text="Forgot Password?"
android:textSize="16sp"
android:textColor="@android:color/holo_blue_bright"
android:onClick="ForgotPw"/>



<ProgressBar
android:id="@+id/pbbar1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:visibility="invisible"/>
    </LinearLayout>
    </LinearLayout>

