<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lvparent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            layout="@layout/drawer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <include
            layout="@layout/content_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ProfilePic2nd"
                        android:layout_width="147dp"
                        android:layout_height="142dp"
                        android:src="@drawable/user"
                        app:civ_border_color="#028FFF"
                        app:civ_border_width="2dp"
                        tools:layout_editor_absoluteX="168dp"
                        tools:layout_editor_absoluteY="168dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="288dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btnSetPImg"
                        android:layout_width="243dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/mybtn"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:onClick="SetProfileImg"
                        android:text="EDIT PROFILE PICTURE"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="355dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <EditText
                        android:id="@+id/edtChangeUserName"
                        android:layout_width="225dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/myedittextbg"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/change_username"
                        android:padding="5dp"
                        android:textColor="#2d3436" />

                    <Button
                        android:id="@+id/btnChangeUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/mybtn"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="SET"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <EditText
                        android:id="@+id/edtChangeName"
                        android:layout_width="225dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/myedittextbg"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/change_name"
                        android:padding="5dp"
                        android:textColor="#2d3436" />

                    <Button
                        android:id="@+id/btnChangeName"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/mybtn"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="SET"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <EditText
                        android:id="@+id/edtChangeSurname"
                        android:layout_width="225dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/myedittextbg"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/change_surname"
                        android:padding="5dp"
                        android:textColor="#2d3436" />

                    <Button
                        android:id="@+id/btnChangeSurname"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/mybtn"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="SET"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="288dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btnRstPws"
                        android:layout_width="243dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/mybtn"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:onClick="ResetPw"
                        android:text="RESET PASSWORD"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>



    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>